# Nano-Banana-Desktop

./: CLAUDE.md  README.md  activate.sh  build-deb.sh  build.sh  run.sh  setup-venv.sh  update-deb.sh
.claude/commands/: prompt-ideator.md  sync-prompts.md
code/: .gitignore  pyproject.toml
code/nano_banana/: __init__.py  __main__.py
code/nano_banana/core/: __init__.py  gemini_client.py
code/nano_banana/ui/: __init__.py  api_key_dialog.py  image_editor_tab.py  main_window.py  prompt_selector.py
code/nano_banana/utils/: __init__.py  file_manager.py  prompts.py
code/prompts/artifact-removal/: remove-artifact.md
code/prompts/artistic-effects/: stained-glass.md
code/prompts/atmosphere/: golden-hour.md  vintage-film.md
code/prompts/avatars/: cartoon-style.md
code/prompts/background-editing/: eliminate-clutter.md
code/prompts/color-adjustments/: black-and-white.md  saturation.md
code/prompts/expression-edits/: super-happy.md
code/prompts/for-fun/cultural-context-edits/: asian-cultural-setting.md
code/prompts/for-fun/family-photo-edits/: medieval.md  people-to-cats.md  people-to-monkeys.md  people-to-sloths.md  size-reversal.md
code/prompts/graphics/: email-banner-conversion.md  whiteboard.md  wireframe-cleaner.md
code/prompts/graphics/diagrams/: flowchart-3d-style.md
code/prompts/subject-separation/: remove-all-people.md  slight-blur.md
code/prompts/text-editing/: remove-all-text.md
dev-spec/: spec.md
docs/: gemini-image-generation-api.md
prompts/artistic-effects/: comic-book.md  impressionist.md  pop-art.md
(+19 files in other folders)
